--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=msme
 
+# Use local profile by default; set SPRING_PROFILES_ACTIVE=prod on the server.
+spring.profiles.default=local
+
 spring.datasource.url=jdbc:postgresql://91.134.138.69:5432/msme_db
 spring.datasource.username=postgres
 spring.datasource.password=Password@123
@@ -44,4 +47,3 @@ springdoc.swagger-ui.disable-swagger-default-url=false
 
 # Configure Swagger to work with context path
 springdoc.swagger-ui.use-root-path=true
-
