removed unwanted classes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,14 @@
 spring.application.name=msme
 
 
-spring.datasource.url=jdbc:postgresql://195.250.30.208:5432/postgres
-spring.datasource.username=hrpanelpgfinal
-spring.datasource.password=lk3Acbse3KaKnsHl
+spring.datasource.url=jdbc:postgresql://91.134.138.69:5432/msme_db
+spring.datasource.username=postgres
+spring.datasource.password=Password@123
 spring.datasource.driver-class-name=org.postgresql.Driver
-
-#spring.datasource.url=jdbc:postgresql://postgresql.czqac60kgpz6.eu-north-1.rds.amazonaws.com:5432/postgres
-#spring.datasource.username=postgres
-#spring.datasource.password=Anjaneyulu9000
-#spring.datasource.driver-class-name=org.postgresql.Driver
 
 server.port=8083
 server.servlet.context-path=/msme
 spring.jpa.hibernate.ddl-auto= update
-
-
-#spring.datasource.url=jdbc:postgresql://localhost:5432/anji
-#spring.datasource.username=postgres
-#spring.datasource.password=anji
-#spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.show.sql=true
 
