--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=msme
 
 # Use local profile by default; set SPRING_PROFILES_ACTIVE=prod on the server.
-spring.profiles.default=local
+spring.profiles.default=prod
 
 spring.datasource.url=jdbc:postgresql://91.134.138.69:5432/msme_db
 spring.datasource.username=postgres
