Added all configutations

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
 # Public Swagger base URL for the server list
-app.swagger.server-url=http://91.134.138.69:8083/msme
+app.swagger.server-url=https://api.msme.metaversedu.in/msme
 app.swagger.server-description=Public Server
 
