Add save endpoint to work with stageNumber -1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=msme
 
-spring.profiles.active=prod
+spring.profiles.active=local
 
 spring.datasource.url=jdbc:postgresql://91.134.138.69:5432/msme_db
 spring.datasource.username=postgres
