--- a/pom.xml
+++ b/pom.xml
@@ -86,11 +86,11 @@
             <scope>runtime</scope>
         </dependency>
 
-        <!-- Swagger / OpenAPI -->
+        <!-- Swagger / OpenAPI (no embedded UI; we serve custom static UI) -->
         <dependency>
             <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.5.0</version>
+            <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
+            <version>2.8.15</version>
         </dependency>
 
         <!-- Excel (Apache POI) -->
