--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,4 +34,5 @@ springdoc.show-actuator=false
 springdoc.swagger-ui.disable-swagger-default-url=false
 
 # Configure Swagger to work with context path
-springdoc.swagger-ui.use-root-path=true
+springdoc.swagger-ui.use-root-path=false
+
